--- a/Editor/Elly.Multiplayer.Editor.asmdef
+++ b/Editor/Elly.Multiplayer.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "Elly.Multiplayer.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:8d9b818a36b848f4bb885de44bc40295"
+        "GUID:8d9b818a36b848f4bb885de44bc40295",
+        "GUID:87c263754954da14480ab473f0d3fcf8"
     ],
     "includePlatforms": [
         "Editor"
