Update namespace and component name, scriptable object path

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "com.ellyality.multiplayer.core",
-	"displayName":"Elly Multiplayer Core",
+	"name": "com.ellyality.rpg.core",
+	"displayName":"RPG Core",
 	"version": "1.0.0",
-    "author": "Elly.Multiplayer",
+    "author": "Elly Script",
     "unity": "2019.2",
-    "keywords": ["multiplayer", "core", "framework"],
+    "keywords": ["rpg", "core", "framework"],
     "category": "engineering",
     "license": "LICENSE",
-	"description": "Sqlite database SDK",
-    "documentationUrl": "https://github.com/Ellyality/package_socketio/blob/main/README.md",
+	"description": "RPG core library",
+    "documentationUrl": "https://github.com/Ellyality/package_rpg/blob/main/README.md",
     "dependencies": {
 		"com.ellyality.network.socketio": "1.0.0",
 		"com.ellyality.data.sqlite": "1.0.4",
