--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "documentationUrl": "https://github.com/Ellyality/package_rpg/blob/main/README.md",
     "dependencies": {
 		"com.ellyality.network.socketio": "1.0.2",
-		"com.ellyality.data.sqlite": "1.0.5",
+		"com.ellyality.data.sqlite": "1.0.5"
     },
 	"samples":[
         {
